# chatgpt_demo

./: README.md  pyproject.toml
dev_scripts/: clean_install_all.sh
notebooks/: fourier_transform.ipynb  fourier_transform.json  heterodyne_4o.ipynb  heterodyne_5.1.ipynb  heterodyne_5.1.json  heterodyne_5.1.txt
scripts/: simpson_demo.py
