[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chatgpt_demo"
version = "0.0.1"
description = "Demos in collaboration with ChatGPT"
keywords = ["demo", "ChatGPT"]
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Greg Buzzard", email = "buzzard@purdue.edu" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent"
]
requires-python = ">=3.9"
dependencies = [
    "matplotlib",
    "numpy",
    "IPython"
]

[tool.setuptools.packages]
find = {}

[project.urls]
source = "https://github.com/gbuzzard/chatgpt_demo"
